--- a/data/membros.yml
+++ b/data/membros.yml
@@ -220,7 +220,7 @@ membros:
   #curso:
   imagem: JoaoRodrigues.jpg
 - nome: José Lopes
-  cargo: Coornedador de Laboratório
+  cargo: Coornedador de Dev
   #curso:
   imagem: LopesBismuth.jpeg
 - nome: Martim Bento
