fix: footer link and Mr. Sancho

--- a/data/membros.yml
+++ b/data/membros.yml
@@ -182,7 +182,7 @@ membros:
 - nome: Felipe Sancho
   cargo: RH
   #curso:
-  imagem: placeholder.png
+  imagem: FelipeSancho.jpg
 - nome: Filipe Piçarra
   cargo: Subcoordenação
   #curso:
