foto diogo neves

--- a/data/membros.yml
+++ b/data/membros.yml
@@ -54,7 +54,7 @@ desenvolvimento:
   - nome: Diogo Neves
     cargo: Dev
     #curso: 3º ano, LEEC
-    imagem: placeholder.png
+    imagem: DiogoNeves.jpg
   - nome: Ricardo Pais
     cargo: Dev
     #curso: 
@@ -170,7 +170,7 @@ membros:
 - nome: Diogo Neves
   cargo: Dev
   #curso:
-  imagem: placeholder.png
+  imagem: DiogoNeves.jpg
 - nome: Diana Albuquerque
   cargo: Marketing
   #curso:
