fix: social buttons

--- a/config.toml
+++ b/config.toml
@@ -81,4 +81,4 @@ themify_css = "/css/themify-icons.css"
 
     [[Languages.en.params.socialIcon]]
       icon = "ti-facebook"
-      URL = "https://https://www.facebook.com/hackerschoolist/"
+      URL = "https://www.facebook.com/hackerschoolist/"
